[tool.poetry]
name = "Koshu"
version = "1.5"
description = ""
authors = ["Oser"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
choice = "^0.1"
youtube_dl = "^2021.6.6"
tasks = "^2.8.0"
PyNaCl = "^1.4.0"
DiscordUtils = "^1.3.4"
utils = "^1.0.1"
lyricsgenius = "^3.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
